# delta

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  install.sh  llms.txt
.github/workflows/: ci.yml
alerts/: delta.yml
console/: index.html  package.json  tsconfig.json  vite.config.ts
console/src/: App.vue
console/src/api/: delta.ts
console/src/components/: Layout.vue
console/src/router/: index.ts
console/src/stores/: auth.ts
console/src/styles/: global.css
console/src/views/: Cache.vue  Cluster.vue  Collections.vue  Connections.vue  Dashboard.vue  Databases.vue  Documents.vue  Login.vue  Monitor.vue  Permissions.vue  Policies.vue  Query.vue  Roles.vue  Settings.vue  Shards.vue  Users.vue  Vector.vue
dashboards/: README.md  delta.json  prometheus.example.yml
src/auth/: auth_manager.cpp  auth_manager.hpp  password.hpp
src/cache/: cache_engine.cpp  cache_engine.hpp
src/cluster/: hlc.hpp  shard_router.hpp
src/core/: backup_crypto.hpp  collection.cpp  collection.hpp  common.hpp  constants.hpp  document.hpp  logger.hpp  transaction.cpp  transaction.hpp  validation.hpp
src/database/: database_manager.cpp  database_manager.hpp
src/network/: connection_pool.hpp  deltaql_protocol.hpp  deltaql_server.hpp  http_server.cpp  http_server.hpp  raft.cpp  raft.hpp  raft_http_transport.hpp  raft_lsm_sm.hpp  replication.cpp  replication.hpp  ws_server.hpp
src/server/: config.cpp  config.hpp  main.cpp
src/storage/: bloom_filter.hpp  crc32.hpp  lsm_tree.cpp  lsm_tree.hpp
src/vector/: hnsw_index.cpp  hnsw_index.hpp
tests/integration/: multi_master_chaos.py  raft_chaos.py  sharding_chaos.py
tests/unit/: test_admin_reload.cpp  test_aggregation.cpp  test_auth_security.cpp  test_basic.cpp  test_cache.cpp  test_cache_bytes.cpp  test_collection_concurrent.cpp  test_compaction.cpp  test_composite_index.cpp  test_hnsw_advanced.cpp  test_hnsw_delete.cpp  test_http_integration.cpp  test_lookup.cpp  test_optimistic_lock.cpp  test_query_planner.cpp  test_raft.cpp  test_raft_http.cpp  test_rls_expr.cpp  test_storage.cpp  test_tls.cpp  test_transaction.cpp  test_validation.cpp  test_vector.cpp
tools/: delta-admin  delta-reshard
